--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "",
-  "version": "",
-  "description": "",
+  "name": "api-dio-serverless-azure",
+  "version": "0.1",
+  "description": "API arquitetura Serverless em Node.js + Azure functions",
   "scripts": {
     "test": "echo \"No tests yet...\""
   },
